# delphi

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  UPSTREAM.txt  alembic.ini  delphi.md  docker-compose.gpu.yml  docker-compose.lite.yml  docker-compose.yml  env.example  fixes-to-be-done.md  launch_app.sh  publish_packages.sh  pyproject.toml  render.yaml  render_build.sh  render_deploy.sh  setup_local.sql  setup_supabase.sql
alembic/versions/: 001_initial_schema.py
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_research_jobs.py  003_docs_sources.py  004_hybrid_retrieval.py  005_thesis_connector.py  006_context_blobs.py  007_doc_versions.py  008_source_visibility.py  009_docs_full_text.py  010_symbol_references.py
backend/synsc/: cli.py  config.py  logging.py
backend/synsc/api/: __init__.py  http_server.py  mcp_server.py
backend/synsc/auth/: oauth.py  sessions.py
backend/synsc/bench/: __init__.py  corpus.py  harness.py  metrics.py  retrievers.py
backend/synsc/core/: arxiv_client.py  chunker.py  context_enrichment.py  git_client.py  huggingface_client.py  language_detector.py  paper_chunker.py  pdf_processor.py
backend/synsc/database/: models.py
backend/synsc/embeddings/: generator.py  providers.py
backend/synsc/extractors/: base.py  citations.py  code_snippets.py
backend/synsc/indexing/: faiss_manager.py  vector_store.py
backend/synsc/parsing/: __init__.py  base.py  call_graph_util.py  generic_parser.py  language_specs.py  python_parser.py  regex_parser.py  registry.py  typescript_parser.py
backend/synsc/services/: __init__.py  analysis_service.py  atlas_connector.py  budget.py  catalog.py  code_graph_service.py  context_blob_service.py  context_pack.py  dataset_service.py  docs_autodiscover.py  docs_service.py  freshness_service.py  grep_service.py  hybrid_retrieval.py  indexing_service.py  job_queue_service.py  observability.py  ownership_service.py  paper_retrieval.py  paper_service.py  reranker.py  research_service.py  research_sessions.py  search_service.py  source_service.py  symbol_service.py  thesis_connector.py  token_encryption.py  visualization_service.py
backend/synsc/services/connectors/: __init__.py
backend/synsc/services/research_providers/: __init__.py  anthropic.py  base.py  gemini.py
backend/synsc/workers/: indexing_worker.py
backend/tests/: conftest.py  test_alembic.py  test_atlas_connector_surface.py  test_auth.py  test_batch_read.py  test_bench.py  test_budget.py  test_catalog.py  test_code_graph.py  test_config.py  test_connectors_and_pdf_url.py  test_context_blob.py  test_context_pack_helpers.py  test_cors.py  test_docs_autodiscover.py  test_docs_chunking.py  test_docs_source.py  test_docs_versions.py  test_error_handling.py  test_freshness.py  test_generic_parsers.py  test_git_client.py  test_grep.py  test_hash_embeddings.py  test_health.py  test_http_endpoints.py  test_hybrid_retrieval.py  test_imports.py  test_integration_hybrid_search.py  test_integration_postgres.py  test_local_folder.py  test_logging.py  test_mcp_new_tools.py  test_mcp_profiles.py  test_mcp_tools.py  test_mcp_unified_tools.py  test_observability_classifier.py  test_ownership.py  test_paper_retrieval_helpers.py  test_paper_sections.py  (+15 more)
bench/: README.md  run.py  tasks.json
bench/corpus/api/: routes.py  server.py
bench/corpus/auth/: login.py  password.py  tokens.py
bench/corpus/cache/: store.py
bench/corpus/db/: connection.py  models.py
bench/corpus/frontend/: api_client.js
bench/corpus/services/: notify.go
bench/corpus/utils/: strings.py
bench/corpus/workers/: queue.py
bench/results/: report.json  report.md
database/supabase/: setup_local.sql
docs/: architecture.md  cold-start.md  deployment-lite.md  env-advanced.md  gpu.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/brand/Brand Pattern/: low  color-on-transparent-background Source File.ai  main color-on-transparent-background Source File.ai
frontend/brand/Icon/: Vector.ai
frontend/brand/Logo File/Black Logo/: vector.ai
frontend/brand/Logo File/Main Logo File/: vector.ai
frontend/brand/Logo File/White logo/: vector.ai
frontend/brand/Social media cover/: Vector.ai
frontend/brand/Stationary Design/: Business Card 2.ai  Business Card.ai  Envelope Design.ai  Letterhead Design.ai
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/api-keys/: page.tsx
frontend/src/components/: ConfirmDialog.tsx  PageHeader.tsx  PageShell.tsx  Sidebar.tsx
frontend/src/contexts/: UserProfileContext.tsx
frontend/src/lib/: api.ts  supabase.ts
migrations/: 001_add_missing_columns.sql  002_hash_api_keys.sql  003_rate_limits.sql  004_harden_rls.sql  005_github_tokens.sql  006_datasets.sql  007_huggingface_tokens.sql  008_gemini_costs.sql  009_cleanup_orphaned_repos.sql  010_github_id.sql  011_billing_cycles.sql  012_auth_github_ids.sql  013_revoke_blanket_grants.sql  014_lock_down_rpc_functions.sql  015_harden_dataset_rls.sql  016_rate_limits_rls.sql  017_chunk_relationships.sql
scripts/: backfill_github_ids.py  delete_repos.py  launch_app.sh
synsc/: __init__.py  config.py  main.py  mcp_stdio_proxy.py  supabase_auth.py
synsc/api/: http_server.py  mcp_server.py  rate_limit.py
synsc/auth/: __init__.py
synsc/core/: deduplicator.py  text_processing.py
synsc/database/: connection.py  models.py
synsc/embeddings/: generator.py
synsc/extractors/: citations.py  equations.py
synsc/indexing/: pgvector_manager.py  vector_store.py
synsc/parsing/: models.py  registry.py
synsc/services/: analysis_service.py  cost_tracker.py  dataset_service.py  indexing_service.py  paper_service.py  paper_service_supabase.py  reranker.py  search_service.py  tier_service.py
synsc/workers/: __init__.py  indexing_worker.py
tests/: conftest.py  test_auth.py  test_error_handling.py  test_health.py  test_http_endpoints.py  test_imports.py  test_mcp_tools.py  test_security_headers.py
(+8 files in other folders)
