[project]
name = "synsc-context"
version = "1.2.0"
description = "Unified MCP server for indexing GitHub repositories, research papers, and HuggingFace datasets - provides deep context to AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "InkVell" }
]
keywords = ["mcp", "github", "research", "papers", "code-search", "ai", "semantic-search", "cursor", "arxiv", "huggingface", "datasets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ===========================================
    # MCP Framework
    # ===========================================
    "mcp[cli]>=1.4.1",
    
    # ===========================================
    # Vector Search & Embeddings
    # ===========================================
    "faiss-cpu>=1.9.0",
    "google-genai>=1.0.0",           # Gemini API for code embeddings
    "sentence-transformers>=2.2.0",   # Local HF model for paper embeddings
    "torch>=2.0.0",                   # Required by sentence-transformers
    
    # ===========================================
    # Database
    # ===========================================
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",         # PostgreSQL driver for Supabase
    "pgvector>=0.3.0",                # pgvector support
    "alembic>=1.13.0",                # Database migrations
    
    # ===========================================
    # Validation & Data
    # ===========================================
    "pydantic>=2.7.2",
    "numpy>=1.24.0",
    
    # ===========================================
    # Token counting
    # ===========================================
    "tiktoken>=0.7.0",
    
    # ===========================================
    # Logging
    # ===========================================
    "structlog>=24.1.0",
    
    # ===========================================
    # HTTP client & server
    # ===========================================
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=22.0.0",
    "slowapi>=0.1.9",                 # Rate limiting
    
    # ===========================================
    # Git operations (for code-context)
    # ===========================================
    "dulwich>=0.22.0",
    
    # ===========================================
    # AST parsing for symbol extraction
    # ===========================================
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    
    # ===========================================
    # PDF & Research Paper processing
    # ===========================================
    "pymupdf>=1.23.0",                # PDF text extraction
    "arxiv>=2.1.0",                   # arXiv API
    "markdownify>=1.1.0",             # HTML to markdown
    "scikit-learn>=1.3.0",            # For clustering/similarity
    
    # ===========================================
    # HuggingFace Hub
    # ===========================================
    "huggingface-hub>=0.20.0",           # Dataset metadata & cards (no torch dependency)

    # ===========================================
    # Configuration
    # ===========================================
    "pyyaml>=6.0.1",
    
    # ===========================================
    # Observability
    # ===========================================
    "sentry-sdk[fastapi]>=2.0.0",     # Error tracking & performance monitoring

    # ===========================================
    # Supabase & Auth
    # ===========================================
    "supabase>=2.0.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",

    # ===========================================
    # Token Encryption
    # ===========================================
    "cryptography>=42.0.0",           # Fernet encryption for GitHub PATs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# Tree-sitter for additional languages (future)
ast-extra = [
    # Add more language parsers here as needed
]

[project.scripts]
# Main CLI entry points
synsc-context = "synsc.cli:main"
synsc-context-mcp = "synsc.api.mcp_server:run_server"
synsc-context-http = "synsc.api.http_server:run_http_server"

# Lightweight stdio proxy for uvx usage
synsc-context-proxy = "synsc.mcp_stdio_proxy:main"

# Worker
synsc-context-worker = "synsc.workers.indexing_worker:run_worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synsc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["synsc"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -v --durations=5"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = []
